labs/networking/allow-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: simplilearn-allow-ingress
spec:
  podSelector:
    matchLabels:
      app: simplilearn
  ingress:
  - from:
      - podSelector:
          matchLabels:
            app: simplilearn
