labs/networking/deny-all-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: simplilearn-deny-all
spec:
  podSelector:
    matchLabels:
      app: simplilearn
  ingress: []
